--- a/src/pages/businessView/style.css
+++ b/src/pages/businessView/style.css
@@ -55,7 +55,7 @@
     display: flex;
     align-items: center;
     gap: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 .vrating p{
@@ -109,4 +109,11 @@
     display: inline-block;
     height: 200px;
     margin-top: 10px;
+}
+
+.coupons-view{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    margin-top: 30px;
 }
