--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -10,7 +10,10 @@
 .breadcrumb-wrapper{
     width: 100%;
     position: relative;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
     margin-bottom: 15px;
 }
 
