--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -62,7 +62,7 @@
     border-radius: 12px;
     background-color: var(--white);
     box-shadow: var(--box-shadow);
-    height: 100%;
+    /* height: 100%; */
     gap: 10px;
 }
 
@@ -180,3 +180,4 @@
 .gcBtn.active{
     color: var(--theme-color1);
 }
+
