--- a/src/auth/signin/style.css
+++ b/src/auth/signin/style.css
@@ -98,3 +98,21 @@
     width: 100%;
     max-width: 100%;
 }
+
+.auth-form-group {
+    position: relative;
+  }
+  
+  .authInputIcon {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #999;
+  }
+  
+  .auth-input {
+    padding-left: 36px; /* Leave space for lock icon */
+    padding-right: 36px; /* Leave space for eye icon */
+  }
+  
